kyverno-policies/require-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
spec:
  validationFailureAction: enforce
  rules:
    - name: check-run-as-non-root
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Containers must set securityContext.runAsNonRoot to true"
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
